# commodity_data

./: README.md  pyproject.toml  requirements.txt  setup.py
commodity_data/: __init__.py  commodity_data.py  config.py  series_config.py
commodity_data/downloaders/: base_downloader.py  default_config.py
commodity_data/downloaders/barchart/: barchart_downloader.py
commodity_data/downloaders/eex/: eex_data_manager.py
commodity_data/downloaders/omip/: __init__.py  omip_downloader.py
commodity_data/omip/: omip_data.py
commodity_data/sample/: main.py
commodity_data/tests/: test_eex_data.py  test_marshmallow_cfg.py
sample/: barchart_standalone.py  data_deleting.py  data_dowloading.py  data_downloading.py  data_querying.py  data_rolling.py  dowloading_data.py  download_algo_trading.py  eex_standalone.py  main.py  standalone_barchart.py  standalone_eex.py  standalone_omip.py
src/commodity_data/: __init__.py  cdty_data.py  commodity_data.py  common.py  globals.py  series_config.py
src/commodity_data/downloaders/: __init__.py  base_downloader.py  continuous_prices.py  default_config.py  downloader.py  offsets.py  products.py  series_config.py
src/commodity_data/utils/: continous_price.py  continuous_price.py  contract_size.py  dfmi.py
tests/: test_commodity_data.py  test_date_conversions.py  test_downloaders.py  test_eex.py  test_eex_data.py  test_eex_downloader.py  test_fake_downloader.py  test_marshmallow_cfg.py  test_offsets.py  test_omip.py  test_roll.py
tests/test_downloader/: fake_downloader.py  fake_downloader_dataframe.py
(+10 files in other folders)
